<!--
Assignment HW#6
Page strings.xml
Authors Jarrod Norris, Abinandaraj Rajendran, Carrie Mao
-->

<resources>
    <string name="app_name">InClass06</string>
    <string name="email"></string>
    <string name="password"></string>
    <string name="loginBtn">Log In</string>
    <string name="signupBtn">Sign Up</string>
    <string name="et_firstname">First Name</string>
    <string name="et_lastname">lastname</string>
    <string name="et_email">email</string>
    <string name="et_password">choose password</string>
    <string name="et_rpassword">repeat password</string>
    <string name="b_cancel">cancel</string>
    <string name="b_signup">signup</string>
    <string name="main_title">Chat Room</string>
    <string name="signup_title">Sign Up</string>
    <string name="message_thread_title">Message Threads</string>
    <string name="logout_btn">Logout</string>
    <string name="newthread_et">Add New Thread</string>
    <string name="curr_thread">Current Threads</string>
    <string name="btn_whatever">button</string>
    <string name="message_et">Type Message To Send</string>
    <string name="user_shared_preferences">UserPreferences</string>
    <string name="login_error">Login Error</string>
    <string name="login_successful">Login Success!</string>

</resources>
